# AI-Operating-System-for-Ideas

./: .gitignore  README.md  composer.json
.github/workflows/: deploy.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: orchestrator.py  roles.py
backend/app/db/: session.py
backend/app/graph/: client.py
backend/app/orchestration/: local_queue.py
backend/app/rag/: parser.py
docs/: README.md
docs/blueprint/: 01_product_vision.md  02_system_architecture.md  03_module_architecture.md  04_database_design.md  05_knowledge_graph.md  06_api_specifications.md  07_ai_agent_architecture.md  08_prompt_engineering.md  09_rag_architecture.md  10_workflow_engine.md  11_folder_structure.md  12_ui_ux_design.md  13_component_library.md  14_user_flows.md  15_state_management.md  16_security_architecture.md  17_privacy_architecture.md  18_testing_strategy.md  19_deployment_strategy.md  20_plugin_sdk.md  21_extension_api.md  22_marketplace.md  23_cli_design.md  24_desktop_design.md  25_mobile_companion.md  26_performance_optimization.md  27_scalability_roadmap.md  28_open_source_governance.md  29_contribution_guidelines.md  30_future_ai.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/store/: workspaceStore.ts
scripts/: dev.ps1  dev.sh  setup.ps1  setup.sh
