[project]
name = "idea-os-backend"
version = "1.0.0"
description = "FastAPI backend services and agent frameworks for IdeaOS"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "litellm>=1.0.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0",
    "numpy>=1.24.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
